# CCcloud

./: CMakeLists.txt  CMakePresets.json  README.md  generate_proto.sh
logs/2025-04-27/: 1.txt
src/client/: CCcloud_client.hpp  async_client.cc  client.cc  client_api.hpp
src/logger/: AccessLogger.hpp  async_logger.hpp
src/proto/: file.proto
src/server/: AsyncCall.hpp  AsyncDeleteCall.hpp  AsyncDownloadCall.hpp  AsyncUploadCall.hpp  CallBase.hpp  FileServiceImpl.hpp  naive_server.cc  server.cc
src/tools/: BaseQueue.hpp  EBRQueue.hpp  RingBuffer.hpp  lockfreequeue.hpp
tests/: CMakeLists.txt  test_logger.cc
